<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Extirpater</string>
    <string name="lblStart">Start</string>
    <string name="lblStop">Stop</string>
    <string name="lblFullCredits">Credits</string>
    <string name="lblStoragePrimary">Primary Storage</string>
    <string name="lblStorageSecondary">Secondary Storage</string>
    <string name="lblInfo">Info</string>
    <string name="lblErasing">Erasing</string>
    <string name="lblStatus">Status</string>
    <string name="lblAbout">About</string>
    <string name="lblZeroes">Zeroes</string>
    <string name="lblData">Output Data</string>
    <string name="lblIdle">Idle</string>
    <string name="lblFillFileTable">Fill File Table</string>

    <string name="lblRandom" translatable="false">Random</string>
    <string name="lblXORShiftRNG" translatable="false">XORShiftRNG</string>
    <string name="lblMersenneTwisterRNG" translatable="false">MersenneTwisterRNG</string>
    <string name="lblCMWC4096RNG" translatable="false">CMWC4096RNG</string>
    <string name="lblSecureRandom" translatable="false">SecureRandom</string>
</resources>
