<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="us.spotco.extirpater.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/txtPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblStoragePrimary"
            android:textSize="24sp"
            android:typeface="normal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/txtInfoPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPrimary"
            android:layout_centerHorizontal="true"
            android:text="@string/lblInfo"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/prgPrimary"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnPrimary"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:minHeight="75dp"
            android:minWidth="250dp" />

        <Button
            android:id="@+id/btnPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:enabled="false"
            android:text="@string/lblStart" />

        <TextView
            android:id="@+id/txtStatusPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/lblStatus" />

    </RelativeLayout>

    <View style="@style/Divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/txtSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblStorageSecondary"
            android:textSize="24sp"
            android:typeface="normal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/txtInfoSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblInfo"
            android:layout_below="@+id/txtSecondary"
            android:layout_centerHorizontal="true"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/prgSecondary"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnSecondary"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:minHeight="75dp"
            android:minWidth="250dp" />

        <Button
            android:id="@+id/btnSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:enabled="false"
            android:text="@string/lblStart" />

        <TextView
            android:id="@+id/txtStatusSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/lblStatus" />
    </RelativeLayout>
</LinearLayout>
